[gd_scene load_steps=17 format=3 uid="uid://bfoiusp2s4ytu"]

[ext_resource type="PackedScene" uid="uid://blorwsk7msxwu" path="res://Scenes/entity.tscn" id="1_ve8xj"]
[ext_resource type="Script" path="res://Scenes/king.gd" id="2_0ujt3"]
[ext_resource type="Texture2D" uid="uid://xwxusxtkn30s" path="res://Sprites/King.png" id="3_hl8mr"]
[ext_resource type="PackedScene" uid="uid://b5l7nm22qv6uc" path="res://Scenes/interaction_area.tscn" id="4_u17mp"]
[ext_resource type="PackedScene" uid="uid://duap7i25qidv2" path="res://Scenes/speech.tscn" id="5_e14b0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l3gum"]
size = Vector2(20, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_vu73a"]
atlas = ExtResource("3_hl8mr")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_td15l"]
atlas = ExtResource("3_hl8mr")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dtljw"]
atlas = ExtResource("3_hl8mr")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3os1"]
atlas = ExtResource("3_hl8mr")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q321g"]
atlas = ExtResource("3_hl8mr")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uc4vl"]
atlas = ExtResource("3_hl8mr")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_v5lm5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vu73a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_td15l")
}],
"loop": true,
"name": &"after_death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dtljw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3os1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q321g")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uc4vl")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_bg2f2"]
radius = 22.0227

[sub_resource type="CircleShape2D" id="CircleShape2D_qntq0"]
radius = 22.0227

[sub_resource type="CircleShape2D" id="CircleShape2D_13fxo"]
radius = 22.0

[node name="King" instance=ExtResource("1_ve8xj")]
collision_layer = 4
collision_mask = 21
script = ExtResource("2_0ujt3")

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_l3gum")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." index="2"]
sprite_frames = SubResource("SpriteFrames_v5lm5")
autoplay = "default"
flip_h = true

[node name="InteractionArea" parent="." index="3" instance=ExtResource("4_u17mp")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea" index="0"]
shape = SubResource("CircleShape2D_bg2f2")

[node name="InteractionAreaShop" parent="." index="4" instance=ExtResource("4_u17mp")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionAreaShop" index="0"]
shape = SubResource("CircleShape2D_qntq0")

[node name="PlayerLeft" type="Area2D" parent="." index="5"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerLeft" index="0"]
shape = SubResource("CircleShape2D_13fxo")

[node name="CanvasLayer" type="CanvasLayer" parent="." index="6"]

[node name="Speech" parent="CanvasLayer" index="0" instance=ExtResource("5_e14b0")]
visible = false
offset_left = 147.0
offset_top = 597.0
offset_right = 147.0
offset_bottom = 213.0
sprite_sheet = ExtResource("3_hl8mr")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_exited" from="PlayerLeft" to="." method="_on_player_left_body_exited"]
